add support for JSON as output method